Remove dangling anchors believed to cause a rare layout bug.
Faster note loading for large notes.